--- a/src/hidwaan/templates/login.html
+++ b/src/hidwaan/templates/login.html
@@ -28,7 +28,7 @@
     return {
       loginForm: {"username": "", "password": ""},
       authenticate: async function() {
-        const resp = await fetch("/auth/user", {
+        const resp = await fetch("/api/v1/auth/user", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
@@ -42,6 +42,8 @@
         }
 
         const data = await resp.json();
+
+        window.location.replace("/");
       }
     }
   }
